# llmy

./: .gitignore  Cargo.toml  Readme.md
crates/llmy/: Cargo.toml
crates/llmy-agent/: Cargo.toml
crates/llmy-agent-derive/: Cargo.toml
crates/llmy-agent-derive-test/: Cargo.toml
crates/llmy-agent-derive/src/: lib.rs
crates/llmy-agent-derive/tests/: tool.rs
crates/llmy-agent-tools/: Cargo.toml
crates/llmy-agent-tools/src/: bash.rs  lib.rs
crates/llmy-agent-tools/src/files/: absolute.rs  common.rs  mod.rs  prompt.rs  relative.rs
crates/llmy-agent-tools/src/memory/: embed.rs  mod.rs
crates/llmy-agent/src/: agent.rs  embed.rs  lib.rs  memory.rs  tool.rs
crates/llmy-clap/: Cargo.toml
crates/llmy-clap/src/: lib.rs
crates/llmy-cli/: Cargo.toml
crates/llmy-cli/src/: main.rs
crates/llmy-cli/src/commands/: chat.rs  chat_commands.rs  mod.rs  models.rs  tokenizer.rs
crates/llmy-client/: Cargo.toml
crates/llmy-client/src/: billing.rs  client.rs  context.rs  debug.rs  lib.rs  model.rs  settings.rs
crates/llmy-harness/: Cargo.toml
crates/llmy-harness/src/: harness.rs  lib.rs  memory.rs  prompt.rs  utils.rs
crates/llmy-models/: Cargo.toml
crates/llmy-models/src/: lib.rs
crates/llmy-tokenizer/: Cargo.toml  build.rs
crates/llmy-tokenizer/data/: models.json
crates/llmy-tokenizer/src/: lib.rs
crates/llmy-tokenizer/tests/: compare_js.rs  expected.json
crates/llmy-types/: Cargo.toml
crates/llmy-types/src/: error.rs
crates/llmy/src/: lib.rs
