[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.4.1"
edition = "2024"
license = "MIT"
readme = "Readme.md"
description = "All-in-one LLM utilities."
homepage = "https://github.com/wtdcode/llmy"
repository = "https://github.com/wtdcode/llmy"

[workspace.dependencies]
derive_more = { version = "1" }
serde = { version = "1.0" }
clap = {version = "4"}
log = "0.4"
thiserror = "2.0"
color-eyre = "0.6"
async-openai = {version = "0.34"}
itertools = "0.14"
serde_json = "1"
chrono = "0.4"
tracing = "0.1"
tokio = "1"
tokio-stream = "0.1"
dyn-clone = "1"
schemars = "0.9"
fastembed = "5"
glob = "0.3"
walkdir = "2"
dotenvy = "0"
rustyline = "15"
shlex = "1"
tracing-subscriber = "0"

llmy-clap = {version = "0.4.1", path = "./crates/llmy-clap"}
llmy-client = {version = "0.4.1", path = "./crates/llmy-client"}
llmy-types = {version = "0.4.1", path = "./crates/llmy-types"}
llmy-tokenizer = {version = "0.4.1", path = "./crates/llmy-tokenizer"}
llmy-agent = {version = "0.4.1", path = "./crates/llmy-agent"}
llmy-agent-tools = {version = "0.4.1", path = "./crates/llmy-agent-tools"}
llmy-agent-derive = {version = "0.4.1", path = "./crates/llmy-agent-derive"}
llmy-harness = {version = "0.4.1", path = "./crates/llmy-harness"}

llmy = {version = "0.4.1", path = "./crates/llmy"}
llm-cli = {version = "0.4.1", path = "./crates/llmy-cli"}