[package]
name = "llmy-agent-derive-test"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
publish = false

[package.metadata.release]
release = false

[dependencies]
llmy.workspace = true
llmy-agent.workspace = true
llmy-agent-derive.workspace = true
schemars.workspace = true
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["macros", "rt"] }