[package]
name = "llmy-agent-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
glob = "0.3"
llmy-agent.workspace = true
llmy-agent-derive.workspace = true
schemars.workspace = true
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["fs", "io-util", "rt"] }
walkdir = "2"