[package]
name = "llmy-agent-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
glob.workspace = true
schemars.workspace = true
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["fs", "io-util", "rt"] }
fastembed = {workspace = true, features = ["hf-hub-rustls-tls", "ort-download-binaries-rustls-tls"]}
walkdir.workspace = true
color-eyre.workspace = true
tracing.workspace = true

llmy-types.workspace = true
llmy-agent.workspace = true
llmy-agent-derive.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "sync"] }