[package]
name = "llmy-client"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
serde = {workspace = true, features = ["derive"]}
async-openai = {workspace = true, features = ["completions", "completion-types", "chat-completion", "chat-completion-types"]}
color-eyre.workspace = true
tracing.workspace = true
serde_json.workspace = true
itertools.workspace = true
tokio = {workspace = true, features = ["fs"]}
tokio-stream.workspace = true

llmy-tokenizer.workspace = true
llmy-types.workspace = true