[package]
name = "llmy-harness"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
async-openai = { workspace = true, features = ["chat-completion-types"] }
color-eyre.workspace = true
tokio.workspace = true
tracing.workspace = true

llmy-agent-tools.workspace = true
llmy-agent.workspace = true
llmy-client.workspace = true
llmy-types.workspace = true