[package]
name = "llmy-models"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
chrono.workspace = true
serde = {workspace = true, features = ["derive"]}
derive_more = {workspace = true, features = ["display"]}
tracing.workspace = true