[package]
name = "llmy-types"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace = true
color-eyre.workspace = true
async-openai.workspace = true
serde_json.workspace = true