[package]
name = "llmy"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
llmy-clap.workspace = true
llmy-client.workspace = true
llmy-types.workspace = true
llmy-tokenizer.workspace = true
async-openai.workspace = true